change html code

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <div class="footer_content">
             Создано мной в 2023 | Алгоритмика
         </div>
+        <div>lol</div>
     </footer>
 </body>
 </html>
